config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -31,7 +31,7 @@
                 "style": "link"
             },
             {
-                "label": "Contact",
+                "label": "Instagram",
                 "url": "/contact/",
                 "style": "button"
             }
