--- a/content/data/config.json
+++ b/content/data/config.json
@@ -68,7 +68,8 @@
                 "icon": "linkedin",
                 "new_window": true
             }
-        ]
+        ],
+        "content": "Spacesurf."
     },
     "domain": "https://elite-birch-ebc0f.netlify.app"
 }
