config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -71,5 +71,5 @@
         ],
         "content": "Spacesurf."
     },
-    "domain": "https://elite-birch-ebc0f.netlify.app"
+    "domain": "https://design.spacesurf.club"
 }
