--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "accent_color": "green",
     "base_font": "fraunces",
     "header": {
-        "title": "SPACESURF",
+        "title": "Coldtea",
         "logo": "images/logo.svg",
         "logo_alt": "Agency logo",
         "has_nav": true,
