--- a/content/data/config.json
+++ b/content/data/config.json
@@ -69,7 +69,7 @@
                 "new_window": true
             }
         ],
-        "content": "Spacesurf."
+        "content": "coldtea design"
     },
     "domain": "https://design.spacesurf.club"
 }
