config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -69,7 +69,7 @@
                 "new_window": true
             }
         ],
-        "content": "coldtea design"
+        "content": "experience design"
     },
     "domain": "https://design.spacesurf.club"
 }
