config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -70,5 +70,6 @@
             }
         ],
         "content": "experience design"
-    }
+    },
+    "domain": "https://elite-birch-ebc0f.netlify.app"
 }
